// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getAlternateLanguages with article 1`] = `
[
  "nb",
  "nn",
  "en",
  "se",
]
`;

exports[`getAlternateLanguages without article 1`] = `
[
  "nb",
  "nn",
  "se",
]
`;
